--- a/webserver/application.properties
+++ b/webserver/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
 #Fri May 01 02:31:22 CDT 2015
 app.grails.version=2.4.0
-app.name=maxipublica
+app.name=ws_cars
 app.version=0.1.2
